修改jvm参数